[tool.poetry]
name = "novuback"
version = "0.1.0"
description = "A notification system that provides personalized product recommendations based on a user's browsing history and purchase behavior."
authors = ["spaceofmiah <agbonzeosazuwa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
